# RALS-Stack

./: Cargo.toml  LICENSE  README.md  app.db  app.db-shm  app.db-wal
backend/: Cargo.toml  app.db
backend/migrations/: 20250101000000_users.sql  20250902000000_create_coupons.sql
backend/src/: auth.rs  db.rs  main.rs  schema.rs
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  auth.rs  lib.rs  main.rs
migrations/: 20250101000200_redemptions.sql
src/: db.rs  main.rs  schema.rs
static/: index.html
